Frontend: fixed sort menu overflow and padding

--- a/medctrl-frontend/src/shared/menu/menuitems.css
+++ b/medctrl-frontend/src/shared/menu/menuitems.css
@@ -24,6 +24,7 @@
 .select {
   display: inline-block;
   width: 85%;
+  margin-top: 5px;
 }
 
 .filter-input {
